--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-validator": "^7.0.1",
-    "nodemailer": "^6.10.1"  // Changed to match package-lock.json
+    "nodemailer": "^6.10.1"
   }
 }
+
